--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "16.0.5",
     "fumadocs-mdx": "13.0.2",
     "fumadocs-ui": "16.0.5",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/mdx": "^2.0.13",
     "@types/node": "^24.9.1",
@@ -27,7 +34,7 @@
     "@types/react-dom": "^19.2.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
-    "typescript": "^5.9.3",
-    "@biomejs/biome": "^2.3.1"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
