--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
-  ],
+, "content/docs/carts/cart-item-01.mdx", "content/docs/reviews/review-01.mdx", "content/docs/categories/category-01.mdx", "content/docs/orders/order-01.mdx"  ],
   "exclude": [
     "node_modules"
   ]
